Closed Bug 346281 Opened 19 years ago Closed 19 years ago

Crash [@ nsBoxObject::RemoveProperty] passing undefined

Categories

(Core :: DOM: Core & HTML, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: smaug)

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(2 files)

Similar to bug 346083, but for RemoveProperty.
Attached file testcase
Attached patch null checks etc.Splinter Review
Fixes also few other possible problems in the same file; makes sure that return value is set nsnull in few cases.
Assignee: general → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #231094 - Flags: superreview?(bzbarsky)
Attachment #231094 - Flags: review?(bzbarsky)
Attachment #231094 - Flags: superreview?(bzbarsky)
Attachment #231094 - Flags: superreview+
Attachment #231094 - Flags: review?(bzbarsky)
Attachment #231094 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Verified FIXED using the testcase of https://bugzilla.mozilla.org/attachment.cgi?id=231092&action=view with build 2006-07-30-08 of SeaMonkey trunk in Windows XP.
Status: RESOLVED → VERIFIED
I checked in a crashtest a few days ago.
Flags: in-testsuite+
Crash Signature: [@ nsBoxObject::RemoveProperty]
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: