Bug 346281, Crash [@ nsBoxObject::RemoveProperty] passing undefined, r+sr=roc